# ComfyUI_MaskGCT

./: README.md  __init__.py  pyproject.toml  requirements.txt
example/: MaskGCT+MuseTalk20241111.json  Workflow_MaskGCT_20241105.json  Workflow_MaskGCT_20241106.json  Workflow_MaskGCT_20241107.json
models/: auto_tool.py  load_model.py
models/codec/: codec_dataset.py  codec_inference.py
models/codec/facodec/: facodec_dataset.py
models/codec/ns3_codec/: facodec.py
models/tts/maskgct/: maskgct_inference.py  maskgct_utils.py
models/tts/maskgct/g2p/: g2p_generation.py
models/tts/maskgct/g2p/g2p/: __init__.py  english.py  mandarin.py
models/tts/maskgct/g2p/utils/: g2p.py
models/utils/: audio_slicer.py  util.py
nodes/: audio_edit.py  audio_to_text.py  maskgct.py  maskgct1104.txt
phonemizer/backend/espeak/: wrapper.py
sample/: Language_testing.json
